# wai-precompressed

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bb.edn  wai-precompressed.cabal
src/Network/Wai/Middleware/: Precompressed.hs
test/Network/Wai/Middleware/: PrecompressedSpec.hs
