cabal-version:      3.6
name:               wai-precompressed
version:            0.1.0.0
synopsis:           X the wai-precompresseding x
-- A longer description of the package.
-- description:
homepage:           https://wai-precompressed.com/wai-precompressed
-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Juergen Gmeiner
maintainer:         spamless.juergen@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


common deps
    build-depends:
        -- 4.16.4 is ghc 9.2.x
        , base ^>=4.16.4.0
        , bytestring
        , http-types
        , text
        , wai
        , wai-app-static
        , wai-extra
    default-language: GHC2021

common test-deps
    import: deps
    build-depends:    
        , doctest
        , hspec
        , hspec-discover
        , QuickCheck

common opts
    ghc-options:
        -O      
        -Wall
        -Wcompat
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints

common exec-opts
    import: opts
    ghc-options:      
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -with-rtsopts=-T

        
library
    import:           deps, opts
    exposed-modules:  Network.Wai.Middleware.Precompressed
    -- Modules included in this library but not exported.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   src
    
test-suite wai-precompressed-test
    import:           deps, test-deps, opts, exec-opts
    other-modules:    Network.Wai.Middleware.PrecompressedSpec
    build-depends:    wai-precompressed
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    
